Fix ResponsiveNav dropdown width and alignment for better mobile display

--- a/client/src/components/organisms/UserPortal/ResponsiveNavbar/ResponsiveNav.module.css
+++ b/client/src/components/organisms/UserPortal/ResponsiveNavbar/ResponsiveNav.module.css
@@ -193,7 +193,9 @@
     position: absolute;
     top: 100%;
     left: 0;
-    width: 100%;
+    right: 0;
+    width: 100vw;
+    margin-left: calc(-1 * (100vw - 100%) / 2);
     background-color: #ffffff;
     flex-direction: column;
     gap: 0;
